# cpp_sandbox

./: .gitignore  QMC_system_solution.vcxproj  QMC_system_solution.vcxproj.filters  README.md  linear_monte_carlo.cpp  linear_monte_carlo.vcxproj  linear_monte_carlo.vcxproj.filters  meson.build  test.cpp  test.vcxproj  todo.txt
impl/: calculators.h  calculators_fwd.h  declare_random_generator.h  estimate.h  halton.h  make_experiments.h  method.h  neumann_solver.h  printers.h  randomized_quasi.h  rnd_base.h  sobol.h  thread_mode.h  types.h  uniform_random.h
impl/calculators/: calculators.h  calculators_fwd.h  common.h  forked.h  forked_common.h  forked_thread_pool.h  single.h
impl/random/: halton.h  randomized_quasi.h  sobol.h  uniform_random.h  uniform_random_test.h
lib/: gmockd.lib
settings/: equation.h  settings.h
util/: apply.h  create_instance.h  range.h  spinlock.h  stream_utils.h  thread_pool.h  timer.h  traits.h  unused.h  zip.h  zip_test.h
